--- a/app/src/main/res/layout/activity_metodo_de_pago.xml
+++ b/app/src/main/res/layout/activity_metodo_de_pago.xml
@@ -18,17 +18,13 @@
 
     <Spinner
         android:id="@+id/spinnerMetodo"
-        android:layout_marginRight="90dp"
-        android:layout_marginLeft="90dp"
+        android:layout_marginRight="50dp"
+        android:layout_marginLeft="50dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        >
 
     </Spinner>
-
-    <ImageView
-        android:id="@+id/imgViewMetodo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
 
     <Button
         android:id="@+id/cmdNextMetodo"
